# my_quant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
config/: settings.py  universe.py
data/live/: cash.csv
data/live/plans/: 2026-05-19.md  orders_2026-05-19.csv
data/raw/_meta/: trade_calendar.parquet
data/raw/akshare/etf/hfq/: 159915.parquet  510300.parquet  510500.parquet  512760.parquet  512880.parquet  513100.parquet  513500.parquet  518880.parquet  588000.parquet
data/raw/akshare/etf/raw/: 159915.parquet  510300.parquet  510500.parquet  512170.parquet  (+6 more)
docs/: design.md  strategies.md
my_quant/backtest/: bt_engine.py  bt_strategy.py  metrics.py  vector.py  walk_forward.py
my_quant/core/: panel.py  portfolio.py  strategy.py  types.py
my_quant/data/: calendar.py  feature_store.py  registry.py  results.py  schema.py  store.py
my_quant/data/providers/: base.py  ohlcv.py
my_quant/live/: ledger.py  order_plan.py  runner.py
my_quant/live/broker/: base.py  manual.py
my_quant/reporting/: plot.py  report.py
my_quant/strategies/: buy_and_hold.py  dual_ma.py
scripts/: record_trade.py  run_backtest.py  run_live.py  sync_data.py
tests/: conftest.py  helpers.py  test_bt_engine.py  test_calendar.py  test_ledger.py  test_metrics.py  test_ohlcv_provider.py  test_order_plan.py  test_panel.py  test_portfolio.py  test_registry.py  test_reporting.py  test_run_backtest.py  test_runner.py  test_schema.py  test_store.py  test_strategies.py  test_sync_data.py  test_universe_config.py  test_vector.py  test_walk_forward.py
